--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "isbot": "^3.7.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reactflow": "^11.9.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.2.0",
